--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </style>
   </head>
-  <body className="w3-light-grey">
+  <body>
     <div id="root">
   <!--      Здесь будут отображаться наши компоненты-->
     </div>
